--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "url": "https://github.com/Pictogrammers/Element-Webpack/issues"
   },
   "homepage": "https://github.com/Pictogrammers/Element-Webpack#readme",
-  "devDependencies": {
+  "dependencies": {
     "copy-webpack-plugin": "^10.2.4",
     "extra-watch-webpack-plugin": "^1.0.3"
   }
