--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
   "scripts": {
@@ -19,6 +19,9 @@
   "dependencies": {
     "copy-webpack-plugin": "^10.2.4",
     "extra-watch-webpack-plugin": "^1.0.3",
-    "html-webpack-plugin": "^5.5.0"
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
