--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.27",
+  "version": "0.1.38",
+  "type": "module",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
   "scripts": {
