--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.42",
+  "version": "0.1.48",
   "type": "module",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
@@ -29,7 +29,8 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
-    "raw-loader": "^4.0.2",
-    "ts-loader": "^9.5.2"
+    "ts-loader": "^9.5.2",
+    "css-loader": "^7.1.2",
+    "html-loader": "5.1.0"
   }
 }
