--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.48",
+  "version": "0.1.49",
   "type": "module",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
@@ -24,13 +24,16 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^7.1.2",
     "extra-watch-webpack-plugin": "^1.0.3",
+    "html-loader": "5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "ts-loader": "^9.5.2",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "ts-loader": "^9.5.2",
-    "css-loader": "^7.1.2",
-    "html-loader": "5.1.0"
+    "webpack-dev-server": "^5.2.0"
+  },
+  "devDependencies": {
+    "terser-webpack-plugin": "^5.3.14"
   }
 }
