--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.49",
+  "version": "0.1.51",
   "type": "module",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
@@ -20,18 +20,19 @@
   "bin": {
     "element-start": "./bin/element-start.js",
     "element-build": "./bin/element-build.js",
-    "element-publish": "./bin/element-publish.js"
+    "element-publish": "./bin/element-publish.js",
+    "element-test": "./bin/element-test.js"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "extra-watch-webpack-plugin": "^1.0.3",
     "html-loader": "5.1.0",
-    "html-webpack-plugin": "^5.6.3",
-    "ts-loader": "^9.5.2",
-    "webpack": "^5.98.0",
+    "html-webpack-plugin": "^5.6.4",
+    "ts-loader": "^9.5.4",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.2"
   },
   "devDependencies": {
     "terser-webpack-plugin": "^5.3.14"
