--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pictogrammers/element-webpack",
-  "version": "0.1.51",
+  "version": "0.1.52",
   "type": "module",
   "description": "Shared webpack config for @pictogrammers/element",
   "main": "config.js",
@@ -29,6 +29,7 @@
     "extra-watch-webpack-plugin": "^1.0.3",
     "html-loader": "5.1.0",
     "html-webpack-plugin": "^5.6.4",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
